convert / save model tflite

--- a/diseasesTrain.ipynb
+++ b/diseasesTrain.ipynb
@@ -559,8 +559,34 @@
    },
    "outputs": [],
    "source": [
-    "model.save('plant_disease')"
+    "model.save('saved_model')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bf3e6991",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "# Convert the model\n",
+    "converter = tf.lite.TFLiteConverter.from_saved_model(\"./saved_model/\")\n",
+    "tflite_model = converter.convert()\n",
+    "\n",
+    "# Save the model.\n",
+    "with open('model.tflite', 'wb') as f:\n",
+    "  f.write(tflite_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6f2bf27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -579,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.4"
   },
   "papermill": {
    "default_parameters": {},
